[gd_scene load_steps=25 format=2]

[ext_resource path="res://world/FireJiraya.gd" type="Script" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Jiraya_Frog/35.png" type="Texture" id=4]
[ext_resource path="res://assets/Jiraya_Frog/24.png" type="Texture" id=5]
[ext_resource path="res://assets/Jiraya_Frog/25.png" type="Texture" id=6]
[ext_resource path="res://assets/Jiraya_Frog/33.png" type="Texture" id=7]
[ext_resource path="res://assets/Jiraya_Frog/41.png" type="Texture" id=8]
[ext_resource path="res://assets/Jiraya_Frog/26.png" type="Texture" id=9]
[ext_resource path="res://assets/Jiraya_Frog/31.png" type="Texture" id=10]
[ext_resource path="res://assets/Jiraya_Frog/40.png" type="Texture" id=11]
[ext_resource path="res://assets/Jiraya_Frog/36.png" type="Texture" id=12]
[ext_resource path="res://assets/Jiraya_Frog/42.png" type="Texture" id=13]
[ext_resource path="res://assets/Jiraya_Frog/34.png" type="Texture" id=14]
[ext_resource path="res://assets/Jiraya_Frog/23.png" type="Texture" id=15]
[ext_resource path="res://assets/Jiraya_Frog/39.png" type="Texture" id=16]
[ext_resource path="res://assets/Jiraya_Frog/32.png" type="Texture" id=17]
[ext_resource path="res://Music and Sounds/Hurt.ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/Jiraya_Frog/47.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.5, 46 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.5, 45.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.0783, 106.509 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33.2355, 62 )

[node name="FireJiraya" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.945098, 0.745098, 0.745098, 1 )
position = Vector2( 432, 320 )
frames = SubResource( 1 )
frame = 10
speed_scale = 1.4
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 431.5, 320 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 430.5, 319 )
shape = SubResource( 3 )

[node name="firejiraya" parent="." instance=ExtResource( 3 )]
collision_mask = 6

[node name="CollisionShape2D" parent="firejiraya" index="0"]
position = Vector2( 431.467, 318.849 )
rotation = 1.55057
scale = Vector2( 16.32, 1 )
shape = SubResource( 6 )

[node name="attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 404.5, 324 )
scale = Vector2( 3.95661, 1 )
shape = SubResource( 5 )

[node name="Health" type="ColorRect" parent="."]
margin_left = 419.0
margin_top = 267.0
margin_right = 437.0
margin_bottom = 268.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Red" type="ColorRect" parent="Health"]
margin_right = 18.0
margin_bottom = 1.0
color = Color( 0.854902, 0.0313726, 0.164706, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
margin_right = 18.0
margin_bottom = 1.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = 11.0

[node name="deathsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = 11.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="body_entered" from="firejiraya" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]

[editable path="Hurtbox"]
[editable path="firejiraya"]
